# quant-sycophantic

./: .gitignore  Makefile  README.md  pyproject.toml
data/: annotation_results.csv  annotation_task.csv  annotation_task_rubric.txt  annotation_task_with_llm.csv
notebooks/: 01_data_exploration.ipynb  02_labeling_validation.ipynb  03_descriptive_analysis.ipynb  04_causal_modeling.ipynb  05_figures_for_paper.ipynb  05_robustness_checks.ipynb
paper/: main.tex  neurips_2024.sty  references.bib
src/quant_syco/: __init__.py  __main__.py  cli.py  config.py
src/quant_syco/analysis/: __init__.py  causal.py  causal_framework.py  corrections.py  descriptive.py  diagnostics.py  reliability.py
src/quant_syco/data/: __init__.py  download.py  process.py  splits.py
src/quant_syco/features/: __init__.py  lexical.py  metrics.py  stylistic.py  topics.py  topics_embedding.py
src/quant_syco/labeling/: __init__.py  batch.py  human_validation.py  ollama_judge.py  prompts.py
tests/: __init__.py  test_features.py  test_labeling.py
tools/: annotate.py
