[project]
name = "quant-syco"
version = "0.1.0"
description = "Quantifying sycophancy impact on user engagement in LMSYS dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Data handling
    "datasets>=2.14",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "numpy>=1.24",
    # LLM-as-judge
    "ollama>=0.3",
    # Analysis
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "scipy>=1.11",
    # CLI
    "typer[all]>=0.9",
    "rich>=13.0",
    "tqdm>=4.65",
    # Notebooks & visualization
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
quant-syco = "quant_syco.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_syco"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
